--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon server.js",
     "migrate": "npx sequelize-cli db:migrate",
     "migrate:undo": "npx sequelize-cli db:migrate:undo",
-    "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate"
+    "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate",
+    "test": "echo 'Backend tests would go here' && exit 0",
+    "lint": "echo 'Backend linting would go here' && exit 0"
   },
   "keywords": [],
   "author": "",
