--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
+    "test": "echo 'Frontend tests would go here' && exit 0",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
